kubernetes/jsdyb-k8s-001/apps/monitor/kube-prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: &app prometheus
    app.kubernetes.io/instance: *app
    app.kubernetes.io/part-of: *app
  name: *app
  namespace: monitor
spec:
  hostnames:
  - prometheus.${EXTERNAL_DOMAIN}
  parentRefs:
  - kind: Gateway
    name: private-gateway
    namespace: network
  rules:
  - backendRefs:
    - kind: Service
      name: kube-prometheus-stack-prometheus
      port: 9090
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
